<resources>
    <string name="app_name">MyRepro</string>
    <string name="btnLogin">Login</string>
    <string name="hintPw">Password</string>
    <string name="hintUsername">Username</string>
    <string name="judul1">Dashboard</string>
    <string name="judul2">MyRepro - Media Pembelajaran</string>
    <string name="mn1">Pendahuluan</string>
    <string name="mn2">Materi</string>
    <string name="mn3">Tentang</string>
    <string name="mn4">Evaluasi</string>
    <string name="getstart">Get Started ></string>
    <string name="descLogo">logo</string>
    <string name="descBackground">bg_logo</string>
    <string name="panahBack">Panah Kembali</string>
    <string name="titikMenu">Tombol Menu</string>
    <string name="tulisanTentang">Reproduksi merupakan suatu upaya makhluk hidup untuk mempertahankan jenisnya sehingga jenisnya tidak punah. Reproduksi adalah kemampuan organisme untuk menghasilkan organisme yang sifatnya sama persis dengan induknya ataupun  gabungan sifat dari kedua induknya. Sistem reproduksi adalah sistem yang berperan dalam menghasilkan gamet fungsional pada tubuh. Reproduksi menggambarkan pembuatan telur, sperma dan proses-proses yang menyertainya sampai pembuahan (<i>fertilisasi</i>). Sistem reproduksi terdiri dari organ seks primer atau gonad (<i>testis</i> pada pria dan ovarium pada wanita) yang mengekspresikan hormon dan menghasilkan gamet (sperma dan telur). Selain itu juga ada organ seks sekunder berupa kelenjar dan saluran-saluran.</string>
    <string name="descMenu1">Menu Kompetensi Inti</string>
    <string name="descMenu2">Menu Kompetensi Dasar</string>
    <string name="descMenu3">Menu Tujuan</string>
    <string name="descMenu4">Menu Referensi</string>
    <string name="judulKompetensiDasar">B. Kompetensi Dasar</string>
    <string name="judulKompetensiInti">A. Kompetensi Inti</string>
    <string name="judulTujuan">Setelah mengikuti kegiatan pembelajaran diharapkan siswa mampu :</string>
    <string name="title_activity_menuutama">Menuutama</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="judulOrgan">Organ Sistem Reproduksi</string>
    <string name="orKonten1A">Organ sistem reproduksi pada manusia terdiri dari organ reproduksi pria dan wanita. Organ reproduksi pria dan wanita sama-sama berfungsi untuk menghasilkan <i>gamet</i> (sel kelamin). Selain itu, organ reproduksi tersebut mendukung dalam proses <i>fertilisasi</i>.</string>
    <string name="orKonten1">A. ORGAN REPRODUKSI PRIA</string>
    <string name="orKonten2">Organ reproduksi pria terdiri atas organ reproduksi luar dan dalam.</string>
    <string name="orKonten3">Gambar Organ reproduksi pria</string>
    <string name="orKonten4">Organ dalam reproduksi pria</string>
    <string name="orKonten4A">Sumber gambar. <link>http://www.softilmu.com/2015/05/Alat-Organ-Reproduksi-Pria-dan-Fungsi-Adalah.html</link></string>
    <string name="orKonten4B">Sumber gambar. <link>https://brainly.co.id/tugas/12912931</link></string>
    <string name="orKonten4C">Sumber gambar. <link>https://www.dosenpendidikan.co.id/sistem-reproduksi-wanita/</link></string>
    <string name="orKonten5">1. <i>Testis</i>, merupakan organ lunak yang berbentuk oval dengan ukuran panjang 4-5 cm dan diameter 2,5 cm, testis terdiri dari :</string>
    <string name="orKonten6">a. <i>Tubulus semineferus</i>, saluran berkelok-kelok yang menghasilkan sel sperma.</string>
    <string name="orKonten7">b. <i>Sel sertoli</i>, menghasilkan hormon <i>esterogen</i> dan merangsang spermiasi.</string>
    <string name="orKonten8">c. <i>Sel leydig</i>, menghasilkan hormon <i>testosteron</i>.</string>
    <string name="orKonten9">2.	<i>Epididimis</i>, saluran berkelok-kelok tempat pematangan dan penyimpanan sementara sel sperma sebelum sperma dikeluarkan. <i>Epididimis</i> berfungsi untuk mengangkut dan menyimpan sperma yang diproduksi oleh <i>testis</i>.</string>
    <string name="orKonten10">3. <i>Vas deferens</i>, saluran lurus yang berujung pada kelenjar prostat, berfungsi menyalurkan sperma menuju kelenjar <i>vesikula seminalis</i>.</string>
    <string name="orKonten11">4. Kelenjar <i>vesikula seminalis</i> (kantung mani), berjumlah sepasang, menghasilkan nutrisi untuk sperma.</string>
    <string name="orKonten12">5. Kelenjar <i>prostat</i> merupakan kelenjar penghasil semen terbesar berupa cairan yang encer seperti susu dan bersifat seperti alkalis atau basa untuk menyeimbangkan keasaman <i>vagina</i>.</string>
    <string name="hormon1">A. HORMON KELAMIN</string>
    <string name="hormon2">Hormon Kelamin Pada Pria</string>
    <string name="hormon3">1. <i>Follicle Stimulating Hormon</i> (FSH)</string>
    <string name="hormon4">Dihasilkan <i>hipofisis anterior</i>, berfungsi untuk menstimulasi <i>spermatogenesis</i> pada <i>tubulus semineferus</i> dan <i>sel sertoli</i> untuk menghasilkan hormon esterogen.</string>
    <string name="hormon5">2. <i>Interstitial Cell Stimulating Hormon</i> (ICSH)</string>
    <string name="hormon6">Dihasilkan <i>hipofisis anterior</i>, berfungsi menstimulasi <i>sel Leydig</i> menghasilkan testosteron.</string>
    <string name="hormon7">3. Esterogen</string>
    <string name="hormon8">Dihasilkan <i>sel sertoli</i>, berfungsi merangsang <i>spermiasi</i>.</string>
    <string name="hormon9">4. Testosterone</string>
    <string name="hormon10">Dihasilkan <i>sel leydig</i>, berfungsi memunculkan ciri-ciri kelamin sekunder pria mengatur spermatogenesis dan spermiasi.</string>
    <string name="hormon11">Hormon Kelamin Pada Wanita</string>
    <string name="hormon12">1. <i>Follicle Stimulating Hormon</i> (FSH)</string>
    <string name="hormon13">Dihasilkan oleh <i>hipofisis anterior</i>, berfungsi mengatur perkembangan <i>folikel</i> primer sampai menjadi <i>folikel de Graaf</i> (dewasa) pada <i>ovarium</i>.</string>
    <string name="hormon14">2. <i>Luteinizing Hormon</i> (LH)</string>
    <string name="hormon15">Dihasilkan oleh <i>hipofisis anterior</i>, berfungsi mengubah <i>folikel de Graaf</i> menjadi korpus luteum, dan menstimulasi ovulasi.</string>
    <string name="hormon16">3. Estrogen</string>
    <string name="hormon17">Dihasilkan oleh <i>folikel de Graaf</i>, berfungsi memunculkan ciri kelamin sekunder wanita, dan menebalkan <i>endometrium</i>.</string>
    <string name="hormon18">4. Progesteron</string>
    <string name="hormon19">Dihasilkan oleh <i>korpus luteum</i>, berfungsi mempertahankan <i>endometrium</i> untuk persiapan kehamilan.</string>
    <string name="hormon20">B. HORMON PADA SAAT KEHAMILAN</string>
    <string name="hormon22">1. <i>Human Chorionic Gonadotropin Hormon</i> (HCG), berfungsi untuk menstimulasi produksi hormon esterogen dan progesterone ibu.</string>
    <string name="hormon23">2. <i>Esterogen</i> dan <i>progesterone</i>, berfungsi untuk meningkatkan perkembangan fetus dan pertumbuhan payudara ibu.</string>
    <string name="hormon24">3. <i>Somatotrophic Hormon/Growth Hormon</i> (GH), berfungsi untuk meningkatkan pertumbuhan fetus.</string>
    <string name="hormon25">C. HORMON PADA MASA KELAHIRAN</string>
    <string name="hormon26">1. Hormon relaksin, dibentuk <i>ovarium</i> dan plasenta yang berfungsi merenggangkan <i>pubis seminalis</i>.</string>
    <string name="hormon27">2. Pembentukan relaksin memicu penurunan esterogen dan progesterone dan membentuk hormoon kortisol bayi.</string>
    <string name="hormon28">3. Hormon kortisol memicu pembentukan hormon prostaglandin oleh <i>plasenta</i> yang berfungsi merangsang kontraksi <i>uterus</i>.</string>
    <string name="hormon29">4. Kontraksi awal <i>uterus</i> memicu pembentukan oksitosin oleh <i>hipofisis posterior</i> ibu yang meningkatkan kontraksi <i>uterus</i>.</string>
    <string name="hormon30">D. HORMON SAAT MENYUSUI</string>
    <string name="hormon31">1. Mamotripin, berfungsi untuk meningkatkan pertumbuhan payudara ibu.</string>
    <string name="hormon32">2. Esterogen dan progesteron berfungsi untuk mencegah pengeluaran ASI saat masa kehamilan.</string>
    <string name="hormon33">3. Prolactin, menstimulasi pengeluaran ASI setelah masa kehamilan.</string>
    <string name="hormon34">4. <i>Human Chorionic Somatomammo-tropin Hormon</i> (HCS), berfungsi untuk menyokong prolaktin.</string>
    <string name="kb1">Keluarga berencana (KB) adalah program yang bertujuan membantu pasangan suami istri untuk menghindari kelahiran yang tidak diinginkan, mengatur jarak daintara kehamilan dan menentukan jumlah anak dalam keluarga. Dalam peraturan presiden, KB diarahkan untuk mengendalikan pertumbuhan penduduk serta meningkatkan keluarga kecil berkualitas.</string>
    <string name="kb2">TUJUAN KELUARGA BERENCANA</string>
    <string name="kb3">Tujuan utama KB adalah untuk membentuk keluarga kecil sesuai dengan kekuatan sosial ekonomi suatu keluarga dengan cara pengaturan kelahiran agar diperoleh suatu keluarga yang bahagia dan sejahtera yang dapat memenuhi kebutuhan hidupnya. Tujuan lain KB adalah untuk menurunkan angka kelahiran atas dasar kesadaran dan tanggung jawab seluruh masyarakat dengan memilih metode kontrasepsi secara sukarela. Dengan demikian program KB merupakan upaya untuk menurunkan tingkat kelahiran guna membangun keluarga yang sejahtera.</string>
    <string name="kb4">ALAT KONTRASEPSI</string>
    <string name="kb5">Gambar Keluarga Berencana</string>
    <string name="kb6">1. Kontrasepsi alami</string>
    <string name="kb6B">Sumber gambar. <link>https://doktersehat.com/waktu-mengganti-alat-kontrasepsi/</link></string>
    <string name="kb7">Kontrasepsi alami merupakan kontrasepsi berdasarkan sistem kalender. Jika kontrasepsi ini digunakan maka pasangan tersebut tidak boleh melakukan hubungan seks selama masa subur istri.</string>
    <string name="kb8">2. Kontrasepsi interuptus</string>
    <string name="kb9">Metode ini dilakukan dengan cara mengeluarkan penis dari <i>vagina</i> sebelum terjadi ejakulasi.</string>
    <string name="kb10">3. Sawar mekanis</string>
    <string name="kb11">Sawar mekanis mencegah pergerakan sperma ke <i>tuba fallopi</i> (<i>oviduk</i>). Contoh alat yang digunakan untuk metode ini adalah kondom dan sterilisasi.</string>
    <string name="kb12">4. Sterilisasi</string>
    <string name="kb13">Metode kontrasepsi sterilisasi metode permanen untuk mencegah penyatuan sperma dengan ovum melalui operasi.</string>
    <string name="kb14">5. Vasektomi </string>
    <string name="kb15">Vasektomi merupakan proses pemotongan <i>vas deferen</i>. Setelah <i>vas deferen</i> dipotong, kedua ujung seluran diikat agar sperma tidak dapat mengalir, sehingga cairan semen tidak mengandung sperma.</string>
    <string name="kb16">6. Tubektomi </string>
    <string name="kb17">Tubektomi (ligasi tubu), yaitu pemotongan dan pengikatan saluran <i>tuba fallopi</i> (<i>oviduk</i>) sehingga ovum tidak memasuki <i>uterus</i>.</string>
    <string name="kb18">7. Pil KB</string>
    <string name="kb19">Pil KB mencegah ovulasi dengan menekan sekresi gonadotropin. Pil KB juga mengandung steriod sintetik mirip esterogen dan progesteron.</string>
    <string name="kb20">8. Susuk KB</string>
    <string name="kb21">Susuk KB dikenal juga sebagai alat kontrasepsi di bawah kulit atau implan. Susuk KB berisi <i>levornorgestrel</i>. Fungsi <i>levornorgestrel</i> antara lain menghambat <i>ovulasi</i>, menipiskan <i>endometrium</i>, serta menghambat pergerakan sperma karena lendir <i>serviks</i> mengental dan berjumlah sedikit.</string>
    <string name="kb22">9. Suntik KB</string>
    <string name="kb23">Suntik KB mengandung <i>Depo Medroxyprogesterone Acetate</i> (progestin) yang bekerja menghambat <i>ovulasi</i> dan mengentalkan lendir serviks.</string>
</resources>