<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MateriMenu.Hormonreproduksi"
    android:background="@drawable/bgapps2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/warnaToolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Hormon Reproduksi"
        app:titleMarginStart="10dp" />

    <ScrollView
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hormon1"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon2"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon3"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon4"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon5"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon6"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon7"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon8"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon9"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon10"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon11"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon12"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon13"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon14"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon15"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon16"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon17"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon18"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon19"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon20"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/hormon22"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon23"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon24"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon25"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon26"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon27"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon28"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon29"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon30"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon31"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon32"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon33"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/hormon34"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>